se realiza  correcion de textos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -257,7 +257,7 @@
     <string name="guide_donation_donate">Donate</string>
     <string name="guide_donation_donate1">Help others. Give free stuff</string>
     <string name="guide_product_list">Products List</string>
-    <string name="guide_product_list1">Help others. Give free stuff</string>
+    <string name="guide_product_list1">Here you can see pictures and information about products and  contact the donator</string>
 
     <string name="legal_information">Legal Information</string>
     <string name="legal_cancel">Cancel</string>
