se realiza  correcion de categorias y suscribe

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -129,7 +129,7 @@
     <string name="you_will_need_to_pay_for_nthe_delivery">Tendrás que pagar \nla entrega</string>
     <string name="conitnue">Continuar</string>
     <string name="dummy_text_is_the_text_that_is_used_in_the_publishing_industery_or_by_web_designers_to_occupy_the_space_which_will_later_be_filled_with_real_content_this_is_required_when_for_example_the_final_text_is_not_avaliable">El texto ficticio es el texto que se utiliza en la industria editorial o por los diseñadores web para ocupar el espacio que luego se rellenará con contenido real. Esto es necesario cuando, por ejemplo, el texto final no está disponible.</string>
-    <string name="let_the_donor_know_why_you_nwant">Hágale saber al donante que \ndesea</string>
+    <string name="let_the_donor_know_why_you_nwant">Solicitar Producto</string>
     <string name="take_a_pic">Agrega imagen de producto</string>
     <string name="n">norte</string>
     <string name="y">Y</string>
