--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="you_will_need_to_pay_for_nthe_delivery">You will need to pay for\nthe delivery</string>
     <string name="conitnue">Conitnue</string>
     <string name="dummy_text_is_the_text_that_is_used_in_the_publishing_industery_or_by_web_designers_to_occupy_the_space_which_will_later_be_filled_with_real_content_this_is_required_when_for_example_the_final_text_is_not_avaliable">Dummy text is the text that is used in the Publishing industery or by web designers to occupy the space which will later be filled with real content. This is required when, for example, the final text is not avaliable.</string>
-    <string name="let_the_donor_know_why_you_nwant">Let the donor know why you\nwant this product!</string>
+    <string name="let_the_donor_know_why_you_nwant">request product</string>
     <string name="take_a_pic">Add product Image\s:</string>
     <string name="n">N</string>
     <string name="y">Y</string>
