upgrade  version of sdk

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -169,7 +169,7 @@
     <string name="description">Descripción</string>
     <string name="descriptions">Descripción:</string>
     <string name="names">nombres</string>
-    <string name="seller">Vendedor:</string>
+    <string name="seller">Donador:</string>
     <string name="abcd_xyz">ABCD XYZ</string>
     <string name="view_as">Visto como:</string>
     <string name="height">Altura</string>
